@@ -3,6 +3,7 @@
 • Add shortcut for movies set info to context menu
 • Add shortcut for extended info to context menu
 • Minor fixes
+• Minor changes
 
 [B]2.2.8[/B]
 • Add info dialog for movies sets
